feat: /me endpoint
