# backend/docs/swagger.yaml
@@ -116,9 +116,32 @@ paths:
       summary: Register user
       tags:
       - auth
+  /me:
+    get:
+      description: Возвращает профиль текущего аутентифицированного пользователя
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.User'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Get current user
+      tags:
+      - users
   /users/{id}:
     get:
-      description: Доступ только владельцу токена (id должен совпадать).
+      description: Access is restricted by the token owner (the ID must match)
       parameters:
       - description: User ID
         in: path
